--- a/styles/structure.css
+++ b/styles/structure.css
@@ -88,7 +88,7 @@ footer{
     height: 400px;
 
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment:local;
     background-size:cover;
     background-position: center;
 }
