--- a/styles/structure.css
+++ b/styles/structure.css
@@ -98,3 +98,13 @@ footer{
     padding: 10px;
 }
 
+#cookiesDiv{
+    width: 200px;
+    position: absolute;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 10px;
+}#cookiesDiv button{
+    margin: 15px;
+    padding: 10px;
+}
