--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@ body{
     transition: all 0.3s ease; 
 }
 
+*{font-family:'Times New Roman', Times, serif}
+
 #socialLink:hover{
     scale: 1.1;
 }
@@ -128,23 +130,27 @@ a{
     border-radius: 20px;
     transition: all 0.2s ease;
     text-align: center;
+    box-shadow: 10px 10px 20px black;
 }
+
+.project:hover{scale: 1.05;}
 
 .project h1{
     color: var(--dark-grey);
     background-color: var(--light-grey);
 }
 
-
 .project a{
     color: var(--dark-grey);
     background-color: var(--light-grey);
 }
 
-
-
- .project p{
+.project p{
     background-color: var(--dark-grey);
+ }
+
+ .project *{
+    box-shadow: 0px 0px 30px black;
  }
 
 #others{
