--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,5 +1,6 @@
 <footer id="footer">
     <h1>Footer</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis unde in quo reprehenderit odit ab sit ipsa nisi porro atque aut, repudiandae debitis illo optio nemo aspernatur magni ipsum placeat!</p>
+    <br>
+    <a href="../pages/credits.html">Credits</a>
 
 </footer>
