--- a/includes/header.html
+++ b/includes/header.html
@@ -1,7 +1,7 @@
 
 <header id="header">
 
-    <h1 style="margin-top:auto;margin-bottom:auto;padding:10px">Ion Mateus 4</h1>
+    <h1 style="margin-top:auto;margin-bottom:auto;padding:10px">Ion Mateus</h1>
 
     <div id="menuLinks">
 
