--- a/others/others.css
+++ b/others/others.css
@@ -16,13 +16,13 @@
     transition: all 0.2s ease;
     border: 2px solid var(--color1);
 }#othersLinks button:hover{
-    box-shadow: 0px 10px 0px black;
+    box-shadow: 0px 10px 0px var(--color1);
     transform: translateY(-10px);
     border: 2px solid var(--color2);
 }#othersLinks button:active{
-    box-shadow: 0px 0px 0px black;
+    box-shadow: 0px 0px 0px var(--color1);
     transform: translateY(10px);
 }#othersLinks img{
     width: 45px;
-    filter: brightness(0) invert(1);
+    filter: opacity(0.9) drop-shadow(0 0 0 var(--color2)) brightness(10); 
 }
