--- a/projects/projects.css
+++ b/projects/projects.css
@@ -1,23 +1,82 @@
 
-#projectsDiv{
-    margin-inline: calc(var(--margin)*2);
+.flip-card-container {
+    perspective: 1000px;
+    margin: var(--margin);
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
-#project{
-    border: 5px solid var(--color1);
-    border-radius: 20px;
-    width: 100%;
-    height: 350px;
+header{z-index: 1;}
+
+.flip-card {
     margin: var(--margin);
-}#project img{
+    background-color: var(--color2);
+    width: 300px;
+    height: 400px;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
     height: 100%;
-}#project h1{
-    position:absolute;
+    text-align: center;
+    transition: transform 0.5s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border: 2px solid var(--color1);
+    border-radius: 20px;
+    
+}
+
+.flip-card-front {
+    background-size: cover;
+}
+
+.flip-card-back {
+    background-color: var(--color2);
+    color: var(--color1);
+    transform: rotateY(180deg);
+    
+}
+
+.flip-card-back *{
     margin: 10px;
-}#project p{
-    position:absolute;
-    margin: 10px;
+}
+
+#redirectBtn {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    background-color: var(--color2);
+    color: var(--color1);
+    border: 2px solid var(--color1);
+    border-radius: 20px;
+    box-shadow: 0px 5px 0px var(--color1);
+    transition: all 0.2s ease;
+    padding: 5px;
+    flex-wrap:wrap;
+}#redirectBtn:hover {
+    transform: translateY(-10px);
+    box-shadow: 0px 15px 0px var(--color1);
+}#redirectBtn:active {
+    transform: translateY(5px);
+    box-shadow: 0px 0px 0px var(--color1);
+}
+
+#redirectBtn img {
+    width: 20px; 
 }
