--- a/projects/projects.css
+++ b/projects/projects.css
@@ -1,17 +1,15 @@
 
 .flip-card-container {
     perspective: 1000px;
-    margin: var(--margin);
+    margin: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-header{z-index: 1;}
-
 .flip-card {
-    margin: var(--margin);
-    background-color: var(--color2);
+    margin: 20px;
+    background-color: transparent;
     width: 300px;
     height: 400px;
     perspective: 1000px;
@@ -22,7 +20,7 @@ header{z-index: 1;}
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.5s;
+    transition: transform 0.5s ease;
     transform-style: preserve-3d;
 }
 
@@ -37,8 +35,8 @@ header{z-index: 1;}
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    border: 2px solid var(--color1);
-    border-radius: 20px;
+    box-shadow: 0px 0px 20px black;
+    border-radius: 15px;
     
 }
 
@@ -47,8 +45,8 @@ header{z-index: 1;}
 }
 
 .flip-card-back {
-    background-color: var(--color2);
-    color: var(--color1);
+    background-color: var(--black);
+    color: var(--white);
     transform: rotateY(180deg);
     
 }
@@ -61,20 +59,20 @@ header{z-index: 1;}
     display: flex;
     align-items: center;
     padding: 5px;
-    background-color: var(--color2);
-    color: var(--color1);
-    border: 2px solid var(--color1);
+    background-color: var(--black);
+    color: var(--white);
+    border: 2px solid var(--white);
     border-radius: 20px;
-    box-shadow: 0px 5px 0px var(--color1);
+    box-shadow: 0px 5px 0px var(--white);
     transition: all 0.2s ease;
     padding: 5px;
     flex-wrap:wrap;
 }#redirectBtn:hover {
     transform: translateY(-10px);
-    box-shadow: 0px 15px 0px var(--color1);
+    box-shadow: 0px 15px 0px var(--white);
 }#redirectBtn:active {
     transform: translateY(5px);
-    box-shadow: 0px 0px 0px var(--color1);
+    box-shadow: 0px 0px 0px var(--white);
 }
 
 #redirectBtn img {
